--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+contextlib2==0.5.1
 dj-static==0.0.6
 Django==1.9.5
 django-registration==2.0.4
 gunicorn==19.4.5
 psycopg2==2.6.1
+raven==5.12.0
 static3==0.6.1
