--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,13 @@ contextlib2==0.5.1
 dj-database-url==0.4.1
 dj-static==0.0.6
 Django==1.9.5
+django-extensions==1.6.1
 django-registration==2.0.4
+email==4.0.2
 gunicorn==19.4.5
+haikunator==1.0.1
 psycopg2==2.6.1
 raven==5.12.0
+requests==2.9.1
+six==1.10.0
 static3==0.6.1
