start upgrade from 1.9 to 3.1

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-contextlib2==0.5.1
-dj-database-url==0.4.1
-dj-static==0.0.6
-Django==1.11.28
-django-extensions==1.6.1
-django-registration==2.0.4
-email==4.0.2
-gunicorn>=19.5.0
-haikunator==1.0.1
-psycopg2==2.6.1
+contextlib2
+dj-database-url
+dj-static
+Django
+django-extensions
+django-registration
+gunicorn
+haikunator
+psycopg2
 pytz
-raven==5.12.0
-requests==2.20.0
-six==1.10.0
-static3==0.6.1
+raven
+requests
+six
+static3
