--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
-contextlib2
-dj-database-url
-Django
-django-extensions
-django-registration
-gunicorn
-haikunator
-psycopg2
-pytz
-raven
-requests
-six
-static3
+asgiref==3.2.7
+certifi==2019.11.28
+chardet==3.0.4
+confusable-homoglyphs==3.2.0
+contextlib2==0.6.0.post1
+dj-database-url==0.5.0
+Django==3.0.5
+django-extensions==2.2.9
+django-registration==3.1
+gunicorn==20.0.4
+haikunator==2.1.0
+idna==2.9
+psycopg2==2.8.4
+pytz==2019.3
+raven==6.10.0
+requests==2.23.0
+six==1.14.0
+sqlparse==0.3.1
+static3==0.7.0
+urllib3==1.25.8
+whitenoise==5.0.1
